# qrsync

./: .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/workflows/: build_and_test.yml  release.yml
ci/: before_deploy.sh  install.sh  script.sh
src/: cmdline.rs  error.rs  http.rs  lib.rs  main.rs  routes.rs  utils.rs
src/templates/: done.html  error-custom.html  error.html  post.html
