[package]
name = "qrsync"
version = "0.1.8"
edition = "2021"
authors = ["Matteo Bigoi <bigo@crisidev.org>"]
description = "Utility to copy files over WiFi to/from mobile devices inside a terminal."
documentation = "https://docs.rs/qrsync"
readme = "README.md"
homepage = "https://github.com/crisidev/qrsync"
repository = "https://github.com/crisidev/qrsync"
license = "MIT"
keywords = ["qrcode", "terminal", "tokio", "mobile"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
axum = { version = "0.5", features = ["multipart"] }
base64 = "0"
ctrlc = { version = "3", features = ["termination"] }
clap = { version = "3", features = ["derive"] }
hyper = "0.14"
pnet = "0.29"
qr2term = "0.3"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.2"
